--- a/vacations/package.json
+++ b/vacations/package.json
@@ -15,9 +15,11 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-analyze": "GENERATE_SOURCEMAP=true npm run build",
+    "analyze": "npm run build && source-map-explorer ./build/static/js/*.js"
   },
   "eslintConfig": {
     "extends": [
