--- a/vacations/package.json
+++ b/vacations/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.7.2",
